# N64_Remapper

./: .gitmodules  CMakeLists.txt  README.md
.github/: gen_yaml.py  main.yml.j2
.github/workflows/: main.yml
doc/: 10-zcl.rules
include/: Phobri64.h  config.h  control.h  curve_fitting.h  joybus.h  joybus_cons.h  main.h  polyfit.h  read_hardware.h  report.h  stick.h  tusb_config.h  usb.h  usb_descriptors.h  zenith_cfg.h
include/hw/: phob2_debug.h  phobri_proto.h  pico_debug.h  pico_remapper.h
src/: Phobri64.c  config.c  control.c  joybus.c  joybus.pio  joybus_cons.c  main.c  polyfit.c  read_hardware.c  report.c  stick.c  usb.c  usb_descriptors.c
